# hello-world

./: .packit.yaml  README.md  ci.fmf  hello-world.spec  hello.spec  setup.cfg  setup.py  test.fmf  test.txt
.github/workflows/: build.yml
hello/: LICENSE  setup.cfg  setup.py
hello_world/: __init__.py
plans/: rpminspect.fmf  test.fmf
tests/: test_basic.py
world/: README.md  setup.cfg  world.spec
world/world/: __init__.py
