[metadata]
name = world
version = 0.1.0
url = https://github.com/packit/hello
description = Nice and a polite tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    world


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    world=world:main
